--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,7 @@
 cmake_minimum_required(VERSION 3.15)
 project("Tetris-C++_SFML")
-
+set(CMAKE_PROJECT_NAME)
 set(CMAKE_CXX_STANDARD 14)
-
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
-
-set(SFML_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/SFML-2.5.1/include")
-set(SFML_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/SFML-2.5.1/lib")
-set(SFML_DIR "${CMAKE_CURRENT_SOURCE_DIR}/SFML-2.5.1/lib/cmake/SFML")
-
-link_directories(SFML_LIBRARY_DIR)
-include_directories(SFML_INCLUDE_DIR)
-
-set (CMAKE_PROJECT_NAME )
 
 find_package(SFML 2.5.1 COMPONENTS system window graphics network audio)
 
@@ -24,5 +13,11 @@ endif()
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 
-add_executable(${CMAKE_PROJECT_NAME} main.cpp src/Board.cpp include/Board.h src/Piece.cpp include/Piece.h src/Game.cpp include/Game.h src/Menu.cpp include/Menu.h)
+add_executable(${CMAKE_PROJECT_NAME}
+        src/main.cpp
+        src/Board.cpp include/Board.h
+        src/Piece.cpp include/Piece.h
+        src/Game.cpp include/Game.h
+        src/Menu.cpp include/Menu.h)
+
 target_link_libraries (${CMAKE_PROJECT_NAME} sfml-audio sfml-graphics sfml-window sfml-system)
